--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,5 @@
 Package: CoQR
+Type: Package
 Title: Joint Dynamic Models for the VaR and CoVaR
 Version: 0.0.0.9000
 Date: 2022-06-09
@@ -7,15 +8,19 @@ Authors@R:
            comment = c(ORCID = "0000-0002-8322-360X")),
     person("Yannick", "Hoga", , "Yannick.Hoga@vwl.uni-due.de", role = c("aut")))
 Description: The package estimates joint dynamic autoregressive or cross-sectional models of the VaR (Value-at-Risk) (i.e., the quantile) and the CoVaR of a bivariate vector of financial returns.
+URL: https://github.com/TimoDimi/CoQR
 License: GPL-3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+Depends:
+     R (>= 3.5)
 Imports: 
     stats,
     dplyr,
     MASS,
     tibble,
+    tsibble,
     ggplot2,
     mvtnorm,
     lubridate,
