--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(CoQR,fit)
 S3method(autoplot,CoQR)
 S3method(autoplot,CoQRroll)
 S3method(autoplot,SystemicRiskFCeval)
+S3method(fitted,CoQR)
 S3method(forecast,CoQR)
 S3method(plot,CoQR)
 S3method(plot,CoQRroll)
@@ -13,19 +14,18 @@ S3method(print,CoQR)
 S3method(print,CoQRroll)
 S3method(print,SystemicRiskFCeval)
 S3method(print,summary.CoQR)
+S3method(residuals,CoQR)
 S3method(summary,CoQR)
 export(CoQR)
 export(CoQRroll)
 export(SystemicRiskFCeval)
 export(autoplot)
 export(cov.CoQR)
-export(fitted.CoQR)
 export(forecast)
 export(loss_CoVaR)
 export(loss_MES)
 export(loss_VaR)
 export(model_fun)
-export(residuals.CoQR)
 import(ggplot2)
 importFrom(ggplot2,autoplot)
 importFrom(magrittr,`%>%`)
