--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,18 @@
-Package: CoQR
+Package: SystemicRisk
 Type: Package
-Title: Joint Dynamic Models for the VaR and CoVaR
-Version: 0.0.0.9000
-Date: 2022-06-09
+Title: Joint Dynamic Systemic Risk Models for the (VaR, CoVaR) and (VaR, MES)
+Version: 0.0.1.0
+Date: 2023-03-04
 Authors@R: 
     c(person("Timo", "Dimitriadis", , "timo.dimi@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-8322-360X")),
     person("Yannick", "Hoga", , "Yannick.Hoga@vwl.uni-due.de", role = c("aut")))
-Description: The package estimates joint dynamic autoregressive or cross-sectional models of the VaR (Value-at-Risk) (i.e., the quantile) and the CoVaR of a bivariate vector of financial returns.
+Description: The package estimates joint dynamic autoregressive or cross-sectional models of the VaR (Value-at-Risk) (i.e., the quantile) and the CoVaR or MES (Marginal Expected Shortfall) of a bivariate vector of financial returns.
 URL: https://github.com/TimoDimi/CoQR
 License: GPL-3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.3
 Depends:
      R (>= 3.5)
 Imports: 
@@ -29,4 +29,5 @@ Imports:
     tidyselect,
     ggnewscale,
     mixtools,
-    sandwich
+    sandwich,
+    cubature
